fixed z-index phone-bg

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ a{
   position: absolute;
   right: 50px;
   top: 50px;
-  z-index: -1;
+  z-index: 12;
   width: 50%;
 }
 .bg-top img{
